--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://andystu.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Andy's (ycchang) 張又介的技術筆記
+subtitle: Ruby on Rails notes.
+author: Andy Chang (ycchang)
 simple_search: https://www.google.com/search
 description:
 
