add a post octopress install howto

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # ----------------------- #
 
 url: http://andystu.github.io
-title: Andy's (ycchang) 張又介的技術筆記
-subtitle: Ruby on Rails notes.
+title: Andy's (ycchang) Blog
+subtitle: Ruby / Rails / Mac notes.
 author: Yu-Chieh Chang
 simple_search: https://www.google.com/search
 description:
