rename blog as AndyZ blog

--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://andystu.github.io
-title: Andy's (ycchang) Blog
-subtitle: Ruby / Rails / Mac notes.
-author: Yu-Chieh Chang
+title: AndyZ Blog
+subtitle: Ruby on Rails / Rubygems / FullStack / Git / Mac notes.
+author: Yu-Chieh Chang (張又介)
 simple_search: https://www.google.com/search
 description:
 
