--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 # ----------------------- #
 
 url: http://andystu.github.io
-title: AndyZ Blog
+title: AndyZ's Blog
 subtitle: Ruby on Rails / Rubygems / FullStack / Git / Mac notes.
 author: Yu-Chieh Chang (張又介)
 simple_search: https://www.google.com/search
-description: This is AndyZ blog
+description: This is AndyZ's blog
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -95,7 +95,7 @@ disqus_short_name: andystu
 disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-50466556-5
 
 # Facebook Like
 facebook_like: true
