--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 url: http://andystu.github.io
 title: AndyZ's Blog
 subtitle: Ruby on Rails / Rubygems / FullStack / Git / Mac notes.
-author: Yu-Chieh Chang (張又介)
+author: AndyZ (Yu-Chieh Chang)
 simple_search: https://www.google.com/search
 description: This is AndyZ's blog
 
